--- a/sshfs.1
+++ b/sshfs.1
@@ -58,6 +58,9 @@ synchronous writes
 \fB\-o\fR no_readahead
 synchronous reads (no speculative readahead)
 .TP
+\fB\-o\fR sync_readdir
+synchronous readdir
+.TP
 \fB\-o\fR sshfs_debug
 print some debugging information
 .TP
