--- a/sshfs.1
+++ b/sshfs.1
@@ -142,6 +142,11 @@ directly connect to PORT bypassing ssh
 \fB\-o\fR slave
 communicate over stdin and stdout bypassing network
 .TP
+\fB\-o\fR disable_hardlink
+link(2) will return with errno set to ENOSYS.  Hard links don't currently work
+perfectly on sshfs, and this confuses some programs.  If that happens try
+disabling hard links with this option.
+.TP
 \fB\-o\fR transform_symlinks
 transform absolute symlinks to relative
 .TP
