--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2014-02-10  Miklos Szeredi <miklos@szeredi.hu>
+
+	* sshfs: return the correct X_OK access.  Reported by: Alkis
+	Georgopoulos
+
 2014-01-14  Miklos Szeredi <miklos@szeredi.hu>
 
 	* Released 2.5
