--- a/ChangeLog
+++ b/ChangeLog
@@ -5,6 +5,8 @@ Draft notes for upcoming release
   on OS X out of the box.
 * Added -o cache_max_size=N option to let users tune the maximum size of
   the cache in number of entries.
+* Added -o cache_clean_interval=N and -o cache_min_clean_interval=N
+  options to let users tune the cleaning behavior of the cache.
 
 Release 2.7 (2015-01-28)
 ------------------------
