--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,19 @@ Unreleased Changes
 
 * New maintainer (Nikolaus Rath <Nikolaus@rath.org>)
 
+Release 2.6 (2014-01-14)
+------------------------
+
+* Some performance improvements for large directories.
+* New `disable_hardlink` option.
+* Various small bugfixes.
+
+Release 2.4 (2012-03-08)
+------------------------
+
+* New `slave` option.
+* New `idmap`, `uidmap` and `gidmap` options.  
+* Various small bugfixes.
 
 Release 2.3 (2011-07-01)
 ------------------------
