--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,8 @@
-Unreleased Changes
-------------------
+Release 2.7 (2015-01-28)
+------------------------
 
 * New maintainer (Nikolaus Rath <Nikolaus@rath.org>)
+
 
 Release 2.6 (2014-01-14)
 ------------------------
