Document merge of osxfuse's sshfs

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,8 +1,13 @@
+Draft notes for upcoming release
+--------------------------------
+
+* Integrated osxfuse's copy of sshfs, which means that sshfs now works
+  on OS X out of the box.
+
 Release 2.7 (2015-01-28)
 ------------------------
 
 * New maintainer (Nikolaus Rath <Nikolaus@rath.org>)
-
 
 Release 2.6 (2014-01-14)
 ------------------------
