--- a/AUTHORS
+++ b/AUTHORS
@@ -17,10 +17,13 @@ Alan Jenkins <alan.christopher.jenkins@gmail.com>
 Alexander Neumann <alexander@bumpern.de>
 Benjamin Fleischer <fleiben@gmail.com>
 Chris Wolfe <cwolfe@chromium.org>
-Google Inc.
+gala <gala132@users.noreply.github.com>
+George Vlahavas <vlahavas@gmail.com>
 Julio Merino <jmmv@google.com>
+Julio Merino <jmmv@meroh.net>
 Mike Kelly <mike@pair.com>
 Miklos Szeredi <miklos@szeredi.hu>
+Miklos Szeredi <mszeredi@suse.cz>
 Nikolaus Rath <Nikolaus@rath.org>
 Percy Jahn <email@percyjahn.de>
 Qais Patankar <qaisjp@gmail.com>
