--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+Unreleased Changes
+------------------
+
+* Added support for the "fsync" extension.
+
 Release 2.6 (2015-03-01)
 ------------------------
 
