--- a/AUTHORS
+++ b/AUTHORS
@@ -27,3 +27,4 @@ Miklos Szeredi <mszeredi@suse.cz>
 Nikolaus Rath <Nikolaus@rath.org>
 Percy Jahn <email@percyjahn.de>
 Qais Patankar <qaisjp@gmail.com>
+Rian Hunter <rian@alum.mit.edu>
