--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Release 2.9 (2017-04-17)
+------------------------
+
+* Improved support for Cygwin.
+* Various small bugfixes.
+
 Release 2.8 (2016-06-22)
 ------------------------
 
