Added changelog entry for commit d93f1.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+Unreleased Changes
+------------------
+
+* Added support for more SSH options.
+
+
 Release 2.9 (2017-04-17)
 ------------------------
 
