--- a/ChangeLog
+++ b/ChangeLog
@@ -2,8 +2,9 @@ Unreleased Changes
 ------------------
 
 * Added support for more SSH options.
-
-
+* Dropped support for the *nodelay* workaround.
+	
+          
 Release 2.9 (2017-04-17)
 ------------------------
 
