--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 Unreleased Changes
 ------------------
 
+* Documented limited hardlink support.
 * Added support for building with Meson.
 * Added support for more SSH options.
 * Dropped support for the *nodelay* workaround - the last OpenSSH
