--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Bill Zissimopoulos <billziss@navimatics.com>
 Chris Wolfe <cwolfe@chromium.org>
 gala <gala132@users.noreply.github.com>
 George Vlahavas <vlahavas@gmail.com>
+Jakub Jelen <jjelen@redhat.com>
 Julio Merino <jmmv@google.com>
 Julio Merino <jmmv@meroh.net>
 Mike Kelly <mike@pair.com>
@@ -30,4 +31,5 @@ Nikolaus Rath <Nikolaus@rath.org>
 Percy Jahn <email@percyjahn.de>
 Qais Patankar <qaisjp@gmail.com>
 Rian Hunter <rian@alum.mit.edu>
+tpoindessous <thomas@poindessous.com>
 Zoltan Kuscsik <zoltan.kuscsik@linaro.org>
