--- a/AUTHORS
+++ b/AUTHORS
@@ -21,6 +21,7 @@ Bill Zissimopoulos <billziss@navimatics.com>
 Chris Wolfe <cwolfe@chromium.org>
 gala <gala132@users.noreply.github.com>
 George Vlahavas <vlahavas@gmail.com>
+harrim4n <git@harrim4n.com>
 Jakub Jelen <jjelen@redhat.com>
 Julio Merino <jmmv@google.com>
 Julio Merino <jmmv@meroh.net>
