--- a/AUTHORS
+++ b/AUTHORS
@@ -32,6 +32,8 @@ Miklos Szeredi <mszeredi@suse.cz>
 Nikolaus Rath <Nikolaus@rath.org>
 Percy Jahn <email@percyjahn.de>
 Qais Patankar <qaisjp@gmail.com>
+Reid Wagner <wagnerreid@gmail.com>
 Rian Hunter <rian@alum.mit.edu>
+Timo Savola <timo.savola@iki.fi>
 tpoindessous <thomas@poindessous.com>
 Zoltan Kuscsik <zoltan.kuscsik@linaro.org>
