--- a/AUTHORS
+++ b/AUTHORS
@@ -19,9 +19,11 @@ Anatol Pomozov <anatol.pomozov@gmail.com>
 Benjamin Fleischer <fleiben@gmail.com>
 Berserker <berserker.troll@yandex.com>
 Bill Zissimopoulos <billziss@navimatics.com>
+Brandon Carter <b-carter@users.noreply.github.com>
 Chris Wolfe <cwolfe@chromium.org>
 gala <gala132@users.noreply.github.com>
 George Vlahavas <vlahavas@gmail.com>
+G.raud Meyer <graud@gmx.com>
 harrim4n <git@harrim4n.com>
 Jakub Jelen <jjelen@redhat.com>
 Julio Merino <jmmv@google.com>
