--- a/AUTHORS
+++ b/AUTHORS
@@ -21,11 +21,13 @@ Berserker <berserker.troll@yandex.com>
 Bill Zissimopoulos <billziss@navimatics.com>
 Brandon Carter <b-carter@users.noreply.github.com>
 Chris Wolfe <cwolfe@chromium.org>
+Daniel Lublin <daniel@lublin.se>
 gala <gala132@users.noreply.github.com>
 George Vlahavas <vlahavas@gmail.com>
 G.raud Meyer <graud@gmx.com>
 harrim4n <git@harrim4n.com>
 Jakub Jelen <jjelen@redhat.com>
+Josh Triplett <josh@joshtriplett.org>
 Julio Merino <jmmv@google.com>
 Julio Merino <jmmv@meroh.net>
 Mike Kelly <mike@pair.com>
@@ -36,6 +38,8 @@ Percy Jahn <email@percyjahn.de>
 Qais Patankar <qaisjp@gmail.com>
 Reid Wagner <wagnerreid@gmail.com>
 Rian Hunter <rian@alum.mit.edu>
+Rian Hunter <rianhunter@users.noreply.github.com>
+Samuel Murray <samuel.murray@outlook.com>
 Timo Savola <timo.savola@iki.fi>
 tpoindessous <thomas@poindessous.com>
 Zoltan Kuscsik <zoltan.kuscsik@linaro.org>
