--- a/AUTHORS
+++ b/AUTHORS
@@ -36,6 +36,7 @@ Miklos Szeredi <mszeredi@suse.cz>
 Nikolaus Rath <Nikolaus@rath.org>
 Percy Jahn <email@percyjahn.de>
 Qais Patankar <qaisjp@gmail.com>
+Quentin Rameau <quinq@fifth.space>
 Reid Wagner <wagnerreid@gmail.com>
 Rian Hunter <rian@alum.mit.edu>
 Rian Hunter <rianhunter@users.noreply.github.com>
