--- a/AUTHORS
+++ b/AUTHORS
@@ -25,6 +25,7 @@ Clayton G. Hobbs <clay@lakeserv.net>
 Daniel Lublin <daniel@lublin.se>
 DrDaveD <2129743+DrDaveD@users.noreply.github.com>
 gala <gala132@users.noreply.github.com>
+Galen Getsov <4815620+ggetsov@users.noreply.github.com>
 George Vlahavas <vlahavas@gmail.com>
 G.raud Meyer <graud@gmx.com>
 harrim4n <git@harrim4n.com>
@@ -32,7 +33,10 @@ Jakub Jelen <jjelen@redhat.com>
 Josh Triplett <josh@joshtriplett.org>
 Julio Merino <jmmv@google.com>
 Julio Merino <jmmv@meroh.net>
+kalvdans <github@kalvdans.no-ip.org>
+Michael Forney <mforney@mforney.org>
 Mike Kelly <mike@pair.com>
+Mike Salvatore <mike.s.salvatore@gmail.com>
 Miklos Szeredi <miklos@szeredi.hu>
 Miklos Szeredi <mszeredi@suse.cz>
 mssalvatore <mike.s.salvatore@gmail.com>
@@ -46,7 +50,9 @@ Rian Hunter <rianhunter@users.noreply.github.com>
 Samuel Murray <samuel.murray@outlook.com>
 S. D. Cloudt <s.d.cloudt@student.tue.nl>
 smheidrich <smheidrich@weltenfunktion.de>
+sunwire <50745572+sunwire@users.noreply.github.com>
 Tim Harder <radhermit@gmail.com>
 Timo Savola <timo.savola@iki.fi>
 tpoindessous <thomas@poindessous.com>
+Viktor Szakats <vszakats@users.noreply.github.com>
 Zoltan Kuscsik <zoltan.kuscsik@linaro.org>
