--- a/AUTHORS
+++ b/AUTHORS
@@ -23,6 +23,7 @@ Brandon Carter <b-carter@users.noreply.github.com>
 Chris Wolfe <cwolfe@chromium.org>
 Clayton G. Hobbs <clay@lakeserv.net>
 Daniel Lublin <daniel@lublin.se>
+Dominique Martinet <asmadeus@codewreck.org>
 DrDaveD <2129743+DrDaveD@users.noreply.github.com>
 gala <gala132@users.noreply.github.com>
 Galen Getsov <4815620+ggetsov@users.noreply.github.com>
@@ -30,6 +31,7 @@ George Vlahavas <vlahavas@gmail.com>
 G.raud Meyer <graud@gmx.com>
 harrim4n <git@harrim4n.com>
 Jakub Jelen <jjelen@redhat.com>
+jeg139 <54814784+jeg139@users.noreply.github.com>
 Josh Triplett <josh@joshtriplett.org>
 Julio Merino <jmmv@google.com>
 Julio Merino <jmmv@meroh.net>
